Issue 6585048: Centralize truncation CSS

--- a/trunk/www/sameas/css/sameas.less
+++ b/trunk/www/sameas/css/sameas.less
@@ -118,23 +118,6 @@ tr.invalid:hover td {
   text-decoration: none;
 }
 
-.truncate {
-  display: block;
-  overflow:hidden;
-  text-overflow: ellipsis;
-  max-width: 20em;
-}
-
-th:hover .truncate,
-td:hover .truncate {
-  position: absolute;
-  max-width: 1000px;
-  z-index: 10;
-  background: #f8f8f8;
-  .rounded_corners();
-  -webkit-box-shadow: 0 0 4px #999;
-}
-
 #keys.two-column {
     display: inline-block;
     white-space: nowrap;
